--- a/index.html
+++ b/index.html
@@ -15,7 +15,39 @@
   </head>
   <body>
     <div class="container">
-      <h1>TEST</h1>
+      <div class="weather app">
+        <h1>New York</h1>
+        <ul>
+          <li>Monday 11:11</li>
+          <li>Clear Skies</li>
+        </ul>
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              class="sunny-image"
+              src="images/sun.png"
+              alt="sunny"
+              width="25px"
+            />
+            12°C | °F
+          </div>
+          <div class="col-md-6">
+            <ul>
+              <li>Condition: Sunny</li>
+              <li>Humidity: 73%</li>
+              <li>Wind: 3km/h</li>
+            </ul>
+          </div>
+          <small>
+            <a
+              href="https://github.com/mtskinner915/vanilla-weather-app-mts"
+              target="_blank"
+              >Open-source code</a
+            >
+            by Margaret Skinner</small
+          >
+        </div>
+      </div>
     </div>
     <script src="src/app.js"></script>
   </body>
