--- a/index.html
+++ b/index.html
@@ -4,49 +4,69 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
   <body>
     <div class="container">
-      <div class="weather app">
-        <h1>New York</h1>
-        <ul>
-          <li>Monday 11:11</li>
-          <li>Clear Skies</li>
-        </ul>
-        <div class="row">
-          <div class="col-md-6">
-            <img
-              class="sunny-image"
-              src="images/sun.png"
-              alt="sunny"
-              width="25px"
+      <h1>WEATHER</h1>
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <form class="search-city-form" id="search-city-form">
+            <input
+              type="text"
+              placeholder="Search for city..."
+              class="search-text"
+              id="city-input"
             />
-            12°C | °F
+            <button type="search-button" class="search-button">Search</button>
+          </form>
+          <h2 id="display-city"></h2>
+          <ul>
+            <li class="day-time" id="day-time">Monday 11:11am</li>
+          </ul>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="clearfix weather-temperature">
+                <img
+                  src="images/sun.png"
+                  alt="sunny"
+                  width="50px"
+                  class="float-left"
+                />
+                <span class="float-left">
+                  <span class="degree" id="temperature"></span
+                  ><span class="units">
+                    °C | <a href="#" class="fahrenheit-link">°F</a></span
+                  >
+                </span>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <ul class="weather-details">
+                <li>Condition: Sunny</li>
+                <li>Humidity: 73%</li>
+                <li>Wind: 3km/h</li>
+              </ul>
+            </div>
           </div>
-          <div class="col-md-6">
-            <ul>
-              <li>Condition: Sunny</li>
-              <li>Humidity: 73%</li>
-              <li>Wind: 3km/h</li>
-            </ul>
-          </div>
-          <small>
-            <a
-              href="https://github.com/mtskinner915/vanilla-weather-app-mts"
-              target="_blank"
-              >Open-source code</a
-            >
-            by Margaret Skinner</small
-          >
         </div>
+        <small>
+          <a
+            href="https://github.com/mtskinner915/vanilla-weather-app-mts"
+            target="_blank"
+            class="code-link"
+            >Open-source code</a
+          >
+          by Margaret Skinner</small
+        >
       </div>
     </div>
     <script src="src/app.js"></script>
