Added icon API to JS

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <img
                   src="images/sun.png"
                   alt="sunny"
+                  id="icon"
                   width="50px"
                   class="float-left"
                 />
