--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
         <div class="weather-app">
           <form class="search-city-form" id="search-city-form">
             <input
-              type="text"
+              type="search"
               placeholder="Search for city..."
               class="search-text"
               id="city-input"
+              autocomplete="off"
             />
             <button type="search-button" class="search-button">Search</button>
           </form>
