Added the fahrenheit/celsius toggle and refined some CSS styling

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
                 <span class="float-left">
                   <span class="degree" id="temperature"></span
                   ><span class="units">
-                    °C | <a href="#" class="fahrenheit-link">°F</a></span
+                    <a href="#" class="celsius-link" id="celsius-link">°C</a> |
+                    <a href="#" class="fahrenheit-link" id="fahrenheit-link"
+                      >°F</a
+                    ></span
                   >
                 </span>
               </div>
