Integrated daily weather API for forecast

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   src="images/sun.png"
                   alt="sunny"
                   id="icon"
-                  width="50px"
+                  width="70px"
                   class="float-left"
                 />
                 <span class="float-left">
@@ -66,24 +66,7 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast">
-            <div class="row">
-              <div class="col-2">
-                <div class="weather-forecast-box">
-                  <div class="weather-forecast-date">Thursday</div>
-                  <img
-                    src="http://openweathermap.org/img/wn/04d@2x.png"
-                    alt=""
-                    width="36px"
-                  />
-                  <div class="weather-forecast-temperature">
-                    <span class="weather-forecast-temp-max">18°</span> |
-                    <span class="weather-forecast-temp-min">12°</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="weather-forecast" id="forecast"></div>
         </div>
         <small>
           <a
