Finalized and refined page before project submission

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   Condition: <span class="condition" id="condition"></span>
                 </li>
                 <li>Humidity: <span id="humidity">73</span>%</li>
-                <li>Wind: <span id="wind-speed">3</span>km/h</li>
+                <li>Wind: <span id="wind-speed">3</span>m/h</li>
               </ul>
             </div>
           </div>
