Added Daily Forecast title and changed minor styling

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
               </ul>
             </div>
           </div>
+          <h3 class="weather-forecast-title">Daily Forecast:</h3>
           <div class="weather-forecast" id="forecast"></div>
         </div>
         <small>
